Added Service Bus code managment.

--- a/blueprints/loggers/logging_config.json
+++ b/blueprints/loggers/logging_config.json
@@ -1,4 +1,5 @@
 {
+    "format": "%(asctime)s — %(name)s — %(levelname)s — %(module)s:%(funcName)s:%(lineno)d — %(message)s",
     "parent": {
         "name": "my_svc",
         "level": "info"
